--- a/app/src/main/res/drawable/shape_toolbar02.xml
+++ b/app/src/main/res/drawable/shape_toolbar02.xml
@@ -4,7 +4,6 @@
 
     <solid android:color="@color/blue"/>
 
-    <corners android:bottomLeftRadius="40dp"
-        android:bottomRightRadius="40dp"/>
+    <corners android:radius="10dp"/>
 
 </shape>
