--- a/app/src/main/res/drawable/shape_button03.xml
+++ b/app/src/main/res/drawable/shape_button03.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/blue"/>
+    <solid android:color="@color/gray03"/>
 
-    <corners android:radius="20dp"/>
+    <corners android:radius="10dp"/>
+
 </shape>
